--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ header li a {
 	height: 295px;
 	padding-right: 0;
 	overflow: hidden;
-	background-color: black;
+	background-color: green;
 	clear: right;
 }
 
